style/base.css
:root {
  --jp-private-topbar-height: 42px;
}

body {
  margin: 0;
  padding: 0;
}

#main {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

#top-panel {
  border-bottom: var(--jp-border-width) solid var(--jp-border-color0);
  background: var(--jp-layout-color1);
  display: flex;
  min-height: var(--jp-private-topbar-height);
}

#main-menu {
  border-bottom: var(--jp-border-width) solid var(--jp-border-color0);
  background: var(--jp-layout-color1);
  display: flex;
  min-height: var(--jp-private-topbar-height);
  align-items: center;
}

#login-menu {
  border-bottom: var(--jp-border-width) solid var(--jp-border-color0);
  background: var(--jp-layout-color1);
  display: flex;
  min-height: var(--jp-private-topbar-height);
  align-items: center;
}

.jp-ClassicSpacer {
  flex-grow: 1;
  flex-shrink: 1;
}

.jp-ExampleWidget {
  color: var(--jp-ui-font-color1);
  background: var(--jp-layout-color1);
  font-size: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

